# statscend

./: .gitignore  LICENSE  README.md  pyproject.toml
statscend/: __init__.py  bi_logistic_regression.py  bn_logistic_regression.py  datasets.py  linear_regression.py  logistic_regression.py  mahalanobis_distance.py  manova.py  mn_logistic_regression.py  multi_logistic_regression.py  ordinal_regression.py  vif.py
